--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
+  speech_to_text: ^7.0.0
+  flutter_tts: ^4.0.2
+  image_picker: ^1.1.2
+  tflite: ^1.0.5
+  percent_indicator: ^4.2.3
+  camera: ^0.11.0+2
+  firebase_core: ^3.6.0
+  google_ml_kit: ^0.18.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
