--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   camera: ^0.11.0+2
   firebase_core: ^3.6.0
   google_ml_kit: ^0.18.1
+  google_mlkit_text_recognition: ^0.13.1
+  google_mlkit_digital_ink_recognition: ^0.12.1 
   intl: ^0.19.0
 
 dev_dependencies:
