--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,8 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '17.0'
+platform :ios, '15.5'
+
+pod 'GoogleUtilities/Logger', '~> 7.13.0'
+pod 'TensorFlowLiteC', '~> 2.17.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -32,9 +35,10 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  target 'RunnerTests' do
-    inherit! :search_paths
-  end
+  #target 'RunnerTests' do
+  #  inherit! :search_paths
+  #  # Pods for testing
+  #end
 end
 
 post_install do |installer|
