--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.3
+  sdk: ">=2.12.0 <3.7.0"
 
 dependencies:
   flutter:
@@ -13,10 +13,10 @@ dependencies:
   speech_to_text: ^7.0.0
   flutter_tts: ^4.0.2
   image_picker: ^1.1.2
-  tflite: ^1.0.5
+  tflite: ^1.1.2
   percent_indicator: ^4.2.3
   camera: ^0.11.0+2
-  firebase_core: ^3.6.0
+  firebase_core: ^2.5.0
   google_ml_kit: ^0.18.1
   google_mlkit_text_recognition: ^0.13.1
   google_mlkit_digital_ink_recognition: ^0.12.1 
@@ -29,3 +29,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+   - assets/labels.txt
+   - assets/label.txt
+   - assets/mobilenet_v1_1.0_224.tflite
